# cargo-ebuild

./: .gitignore  .travis.yml  Cargo.toml  README.md  cargo-ebuild-0.1.7.ebuild
src/: cargo_utils.rs  core.rs  ebuild.rs  ebuild.template  lib.rs  main.rs  metadata.rs
test-crate/: Cargo.toml
tests/: cargo-ebuild-0.1.6-pre.ebuild  cargo-ebuild-0.1.7.ebuild  integration.rs
