[package]
name = "cargo-ebuild"
version = "0.1.6-pre"
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cardoe/cargo-ebuild"
homepage = "https://github.com/cardoe/cargo-ebuild"
documentation = "https://github.com/cardoe/cargo-ebuild"
readme = "README.md"
keywords = ["cargo-subcommand", "ebuild", "gentoo"]
categories = ["command-line-utilities"]
description = """
Generates an ebuild for a package using the in-tree eclasses.
"""

[badges.travis-ci]
repository = "cardoe/cargo-ebuild"

[dependencies]
cargo = "^0.27"
serde = "1"
serde_derive = "1"
time = "^0.1"
structopt = "0.2.8"
failure = "0.1.1"
human-panic = "1.0.0"
log = "0.4.0"
env_logger = "0.5.10"
