[package]
name = "cargo-ebuild"
version = "0.2.1-alpha.0"
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/cardoe/cargo-ebuild"
homepage = "https://github.com/cardoe/cargo-ebuild"
documentation = "https://github.com/cardoe/cargo-ebuild"
readme = "README.md"
keywords = ["cargo-subcommand", "ebuild", "gentoo"]
categories = ["command-line-utilities"]
description = """
Generates an ebuild for a package using the in-tree eclasses.
"""

[[bin]]
name = "cargo-ebuild"
path = "src/main.rs"

[lib]
name = "cargo_ebuild"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "cardoe/cargo-ebuild" }
is-it-maintained-issue-resolution = { repository = "cardoe/cargo-ebuild" }
is-it-maintained-open-issues = { repository = "cardoe/cargo-ebuild" }
maintenance = { status = "passively-maintained" }

[dependencies]
anyhow = "^1"
cargo_metadata = "^0.9"
itertools = "^0.8"
structopt = "^0.3"
time = "^0.1"
